Refactored css code

--- a/angular-frontend/src/app/home-page/affirmations-details-page/affirmations-details-page.component.html
+++ b/angular-frontend/src/app/home-page/affirmations-details-page/affirmations-details-page.component.html
@@ -1,7 +1,7 @@
 <div class="affirmations-container" *ngIf="!loading; else loadingState">
   <!-- Decorative Background -->
-  <div class="decorative-bg-top"></div>
-  <div class="decorative-bg-bottom"></div>
+  <div class="decorative-bg decorative-bg-top"></div>
+  <div class="decorative-bg decorative-bg-bottom"></div>
 
   <div class="content-wrapper">
     <!-- Header -->
@@ -10,8 +10,8 @@
         <svg xmlns="http://www.w3.org/2000/svg" width="40" height="40" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
           <path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path>
         </svg>
-        <h1 class="header-title">Daily Affirmations</h1>
       </div>
+      <h1 class="header-title">Daily Affirmations</h1>
       <p class="header-subtitle">Empower yourself with daily inspiration</p>
       <p class="header-description">Browse, share, and set reminders for affirmations that resonate with you</p>
     </div>
@@ -55,7 +55,7 @@
         *ngFor="let affirmation of filteredAffirmations"
         (click)="navigateToAffirmation(affirmation.id)"
         class="affirmation-card"
-        [ngClass]="'bg-gradient-to-br ' + getGradientClass(affirmation.tags)">
+        [ngClass]="'gradient-' + getGradientClass(affirmation.tags)">
 
         <!-- Card Background Pattern -->
         <div class="affirmation-card-pattern">
